# Renderer

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
include/debugManager/: debugManager.h
include/racingGame/: car.h  carController.h  carState.h  constants.h  gameConfig.h  gameManager.h  humanCarController.h  track.h
include/racingGame/controllers/: humanCarController.h
include/racingGame/scenarios/: humanMultiplayerScenario.h  humanSinglePlayerScenario.h  scenario.h  spawningStrategy.h
include/renderable/: car.h  line.h  polygon.h  renderable.h  triangle.h
include/renderer/: camera.h  renderer.h
include/shaders/: shaderManager.h  shaders.h
include/utils/: colors.h  randomEngine.h  singleton.h  utils.h
shaders/: polygon_shader.fs  polygon_shader.vs  shader.vs  track_shader.fs  track_shader.vs
src/: main.cpp
src/debugManager/: debugManager.cpp
src/racingGame/: car.cpp  carState.cpp  gameManager.cpp  humanCarController.cpp  track.cpp
src/racingGame/controllers/: humanCarController.cpp
src/racingGame/scenarios/: humanMultiplayerScenario.cpp  humanSinglePlayerScenario.cpp  spawningStrategy.cpp
src/renderable/: car.cpp  line.cpp  polygon.cpp  renderable.cpp  triangle.cpp
src/renderer/: camera.cpp  renderer.cpp
src/shaders/: shaderManager.cpp  shaders.cpp
src/utils/: utils.cpp
